cfn_benchmark/cfn_templates/manpaz__aws/cloudformation/bashlinux_kubernetes-worker_ec2-security-group.yaml
---
# Bashlinux::Kubernetes Worker::EC2 Security Group
#
#   Cloudformation template to deploy an EC2 security group
#   for the Kubernetes worker nodes
#
#   Manuel F Martinez
#   Bashlinux
#   Los Angeles, CA
#
AWSTemplateFormatVersion: "2010-09-09"
Description: EC2 Kubernetes Worker Security Group template

###############################################################################
Parameters:

  Environment:
    Description: Kubernetes Cluster environment
    Type: String
    MinLength: "1"
    MaxLength: "20"
    Default: staging
    AllowedValues: [ "prod", "staging" ]
    ConstraintDescription: Environment name can only contain "prod" or "staging".

  Organization:
    Description: Organization or Customer name
    Type: String
    MinLength: "1"
    MaxLength: "32"
    Default: bashlinux
    AllowedPattern: "[a-zA-Z0-9\\-]*"
    ConstraintDescription: >
      Name of the organization must contains only letters, numbers and hyphens

###############################################################################
Resources:

  Ec2KubernetesWorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable access to the Kubernetes ports on the Workers
      VpcId: !ImportValue
          "Fn::Sub": "bashlinux-${Environment}-VpcId"
      Tags:
      - Key: Name
        Value: !Sub "${Organization}-${Environment}-kubernetes-worker-sg"
      - Key: bashlinux:organization-name
        Value: !Ref Organization
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"
      - Key: !Sub "kubernetes.io/cluster/${Organization}-${Environment}"
        Value: "owned"

  ingressKubernetesCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: 4

  ingressKubernetesCalicoBGP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  ingressKubernetesMetricsServerHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Metrics Server HTTPS"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"

  ingressKubernetesKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  ingressKubernetesKubeProxy:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kube-proxy health"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10256"
      ToPort: "10256"

  ingressKubernetesNodePort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: NodePort services"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "30000"
      ToPort: "32767"

  egressKubernetesCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: 4

  egressKubernetesDNS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "DNS: Name resolution within the cluster"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      CidrIp: "0.0.0.0/0"
      IpProtocol: udp
      FromPort: "53"
      ToPort: "53"

  egressKubernetesCalicoBGP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  egressKubernetesMetricsServerHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Metrics Server HTTPS"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"

  egressKubernetesKubelet:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  egressKubernetesKubeProxy:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kube-proxy health"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10256"
      ToPort: "10256"

  egressKubernetesNodePort:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: NodePort services"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "30000"
      ToPort: "32767"

  # Kubernetes Master access --------------------------------------------------
  ingressKubernetesFromMasterCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: 4

  ingressKubernetesToMasterCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: 4

  ingressKubernetesFromMasterCalicoBGP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  ingressKubernetesToMasterCalicoBGP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  ingressKubernetesFromMasterMetricsServerHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Metrics Server HTTPS"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"

  ingressKubernetesToMasterMetricsServerHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Metrics Server HTTPS"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"

  ingressKubernetesToMasterAPI:
    Type: AWS::EC2::SecurityGroupIngress
  ingressKubernetesToMasterAPI:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: API server"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "6443"
      ToPort: "6443"

  ingressKubernetesFromMasterWebhook:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Webhook"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "9443"
      ToPort: "9443"

  ingressKubernetesFromMasterKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  ingressKubernetesToMasterKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kubelete API"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  ingressKubernetesFromMasterKubeProxy:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kube-proxy health"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10256"
      ToPort: "10256"

  ingressKubernetesFromMasterNodePort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: NodePort services"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "30000"
      ToPort: "32767"

  egressKubernetesFromMasterCalicoBGP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  egressKubernetesToMasterCalicoBGP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico BGP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "179"
      ToPort: "179"

  egressKubernetesAnywhereHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Access anywhere via HTTPS"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      CidrIp: "0.0.0.0/0"
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"

  egressKubernetesToMasterCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: 4

  egressKubernetesFromMasterCalicoIPinIP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Calico IP-in-IP"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: 4

  egressKubernetesToMasterAPI:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: API server"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "6443"
      ToPort: "6443"

  egressKubernetesFromMasterWebhook:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Webhook"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "9443"
      ToPort: "9443"

  egressKubernetesFromMasterKubelet:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  egressKubernetesToMasterKubelet:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  egressKubernetesFromMasterKubeProxy:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kube-proxy health"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10256"
      ToPort: "10256"

  egressKubernetesFromMasterNodePort:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: NodePort services"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-master-Ec2KubernetesSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "30000"
      ToPort: "32767"

  # ALBs access ----------------------------------------------------------------
  ingressKubernetesFromAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: NodePort services"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2PublicAlbSecurityGroupId"
      IpProtocol: tcp
      FromPort: "30000"
      ToPort: "32767"

  ingressKubernetesHTTPFromAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: HTTP"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2PublicAlbSecurityGroupId"
      IpProtocol: tcp
      FromPort: "80"
      ToPort: "80"

  # Bastion access -----------------------------------------------------------
  ingressKubernetesSSHFromBastion:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "SSH: Remote administration"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      IpProtocol: tcp
      FromPort: "22"
      ToPort: "22"

  ingressKubernetesZabbixJMXFromBastion:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Zabbix: Passive agent incoming for JMX"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      IpProtocol: tcp
      FromPort: "3000"
      ToPort: "3000"

  ingressKubernetesZabbixFromBastion:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Zabbix: Passive agent incoming"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10050"
      ToPort: "10050"

  ingressKubernetesFromBastion:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  egressKubernetesZabbixToBastion:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Zabbix: Active agent outgoing"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      IpProtocol: tcp
      FromPort: "10051"
      ToPort: "10051"

  egressKubernetesFromBastion:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Kubernetes: Kubelete API"
      GroupId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-Ec2BastionSecurityGroupId"
      DestinationSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "10250"
      ToPort: "10250"

  # Data Stores: Managed Services --------------------------------------------
  ingressKubernetesElasticacheRedis:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Access to Elasticache Redis"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-ElasticacheRedisSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "6379"
      ToPort: "6379"

  egressKubernetesElasticacheRedis:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "RDS: Access to Elasticache Redis"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-ElasticacheRedisSecurityGroupId"
      IpProtocol: tcp
      FromPort: "6379"
      ToPort: "6379"

  ingressKubernetesMqRabbitMq:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Access to MQ RabbitMQ"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-MqRabbitmqSecurityGroup"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "5671"
      ToPort: "5671"

  egressKubernetesMqRabbitMq:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "RDS: Access to MQ RabbitMQ"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-MqRabbitmqSecurityGroup"
      IpProtocol: tcp
      FromPort: "5671"
      ToPort: "5671"

  ingressKubernetesRdsPostgres:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Kubernetes: Access to RDS Postgress"
      GroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-RdsPostgresSecurityGroupId"
      SourceSecurityGroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "5432"
      ToPort: "5432"

  egressKubernetesRdsPostgres:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "RDS: Access to RDS Postgress"
      GroupId: !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
      DestinationSecurityGroupId: !ImportValue
        "Fn::Sub": "${Organization}-${Environment}-RdsPostgresSecurityGroupId"
      IpProtocol: tcp
      FromPort: "5432"
      ToPort: "5432"

###############################################################################
Outputs:

  Ec2KubernetesWorkerSecurityGroupId:
    Description: The Security Group ID to use for Kubernetes Worker nodes
    Value:  !GetAtt Ec2KubernetesWorkerSecurityGroup.GroupId
    Export:
      Name: !Sub "${Organization}-${Environment}-worker-Ec2KubernetesSecurityGroupId"
